# Matrix-Multiplication

TASK 1. Language Benchmark of matrix multiplication/Code/C/Matrix-Multiplication-c/: CMakeLists.txt  benchmark.c  main.c  matrix_mult.c  matrix_mult.h
TASK 1. Language Benchmark of matrix multiplication/Code/Python/Matrix-Multiplication-master/: benchmark_matrix_mult.py  matrix_mult.py  requirements.txt
TASK 1. Language Benchmark of matrix multiplication/Output Data/: c_results.csv  java_results.csv  python_results.csv
TASK 2. Optimized Matrix Multiplication Approaches and Sparse Matrices/Code/: dependency-reduced-pom.xml  pom.xml
TASK 2. Optimized Matrix Multiplication Approaches and Sparse Matrices/Output/: results.csv
TASK 3. Vectorized and Parallel Matrix Multiplication/Code/: pom.xml
TASK 3. Vectorized and Parallel Matrix Multiplication/Matrix Multiplication/: pom.xml
TASK 3. Vectorized and Parallel Matrix Multiplication/Output/: enriched-results.csv
TASK 4. Distributed Matrix Multiplication/Code/MatrixMultDistJava/: Dockerfile.hazelcast-node  Dockerfile.matrix-client  dependency-reduced-pom.xml  docker-compose.yml  pom.xml  start.sh
TASK 4. Distributed Matrix Multiplication/Code/MatrixMultDistPython/: Dockerfile  benchmark_distributed.csv  benchmark_distributed.py  coordinator.py  docker-compose.yml  hazelcast_client.py  requirements.txt  worker.py
TASK 4. Distributed Matrix Multiplication/Output Data/: java_distributed_results.csv  python_distributed_results.csv
(+21 files in other folders)
